--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -19,6 +19,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/makePicture"
+        android:text="Take snapshot"
+        android:layout_marginBottom="12dp"
+        >
+    </Button>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/startStream"
         android:text="@string/make_picture_btn_text"
         android:layout_marginBottom="12dp"
         >
